deploy/k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n9e-alter-service
  namespace: n9e-alter-service
  labels:
    app.kubernetes.io/name: n9e-alter-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: n9e-alter-service
  ports:
    - name: http
      port: 80
      targetPort: http
